--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,69 @@
-Django==2.2.19
-Pillow==8.1.1
-psycopg2-binary==2.8.6
-pytz==2021.1
-sqlparse==0.4.1
+# appdirs==1.4.4
+# asgiref==3.3.1
+# astroid==2.1.0
+# beautifulsoup4==4.6.0
+# bs4==0.0.1
+# certifi==2018.4.16
+# chardet==3.0.4
+# colorama==0.4.1
+# distlib==0.3.1
+# dj-database-url==0.5.0
+# Django==2.2
+# django-grappelli==2.14.1
+# django-js-asset==1.2.2
+# django-mptt==0.12.0
+# django-suit==0.2.25
+# djangorestframework==3.12.4
+# elasticsearch==6.3.1
+# filelock==3.0.12
+# gunicorn==19.8.1
+# idna==2.6
+# importlib-metadata==3.7.3
+# isort==4.3.4
+# lazy-object-proxy==1.3.1
+# mailjet-rest==1.3.0
+# mccabe==0.6.1
+# psycopg2-binary==2.8.6
+# pylint==2.2.2
+# pytz==2018.4
+# requests==2.18.4
+# six==1.12.0
+# sqlparse==0.3.0
+# typed-ast==1.1.1
+# typing-extensions==3.7.4.3
+# urllib3==1.22
+# virtualenv==20.4.3
+# virtualenvwrapper-win==1.2.6
+# whitenoise==4.1.2
+# wrapt==1.10.11
+# zipp==3.4.1
+
+Pillow==7.0.0
+PyJWT==2.0.0
+asgiref==3.3.1
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+cryptography==3.3.1
+defusedxml==0.6.0
+dj-pagination==2.5.0
+django-allauth==0.44.0
+django-cleanup==5.1.0
+django-cors-headers==2.5.2
+django-js-asset==1.2.2
+django-mptt==0.12.0
+djangorestframework==3.11.1
+docutils==0.17.1
+idna==2.10
+oauthlib==3.1.0
+pip==21.0.1
+psycopg2-binary==2.8.4
+pycparser==2.20
+python3-openid==3.2.0
+pytz==2019.3
+requests==2.25.1
+requests-oauthlib==1.3.0
+setuptools==54.1.0
+six==1.15.0
+sqlparse==0.3.0
+urllib3==1.26.6
